fix page display on mobile devices

--- a/web/image_gallery/style/styles.css
+++ b/web/image_gallery/style/styles.css
@@ -10,8 +10,6 @@ h1 {
     padding: 10px;
 }
 
-
-
 footer {
     color: white;
     background-color: rgb(51, 58, 52);
@@ -20,6 +18,7 @@ footer {
 
 .mainContent {
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 .contentContainer {
@@ -70,6 +69,11 @@ footer {
 
 .buttonClassA:hover {
     background-color: rgba(190, 19, 206, 0.46);
+}
+
+.buttonText {
+    color: white;
+    text-decoration: none;
 }
 
 @media (max-width: 360px) {
